apollo-router/src/axum_factory/snapshots/apollo_router__axum_factory__tests__defer_is_not_buffered.snap
---
source: apollo-router/src/axum_factory/tests.rs
expression: "json!([{\n        \"data\" :\n        {\n            \"topProducts\" :\n            [{ \"upc\" : \"1\", \"name\" : \"Table\", \"reviews\" : null },\n            { \"upc\" : \"2\", \"name\" : \"Couch\", \"reviews\" : null }]\n        }, \"errors\" :\n        [{\n            \"message\" :\n            \"couldn't find mock for query {\\\"query\\\":\\\"query TopProducts__reviews__1($representations:[_Any!]!){_entities(representations:$representations){...on Product{reviews{__typename id product{__typename upc}}}}}\\\",\\\"operationName\\\":\\\"TopProducts__reviews__1\\\",\\\"variables\\\":{\\\"representations\\\":[{\\\"__typename\\\":\\\"Product\\\",\\\"upc\\\":\\\"1\\\"},{\\\"__typename\\\":\\\"Product\\\",\\\"upc\\\":\\\"2\\\"}]}}\"\n        },\n        {\n            \"message\" :\n            \"Subgraph response from 'reviews' was missing key `_entities`\",\n            \"path\" : [\"topProducts\", \"@\"]\n        }], \"hasNext\" : true,\n    }, { \"hasNext\" : false }])"
---
[
  {
    "data": {
      "topProducts": [
        {
          "upc": "1",
          "name": "Table",
          "reviews": null
        },
        {
          "upc": "2",
          "name": "Couch",
          "reviews": null
        }
      ]
    },
    "errors": [
      {
        "message": "couldn't find mock for query {\"query\":\"query TopProducts__reviews__1($representations:[_Any!]!){_entities(representations:$representations){...on Product{reviews{__typename id product{__typename upc}}}}}\",\"operationName\":\"TopProducts__reviews__1\",\"variables\":{\"representations\":[{\"__typename\":\"Product\",\"upc\":\"1\"},{\"__typename\":\"Product\",\"upc\":\"2\"}]}}"
      },
      {
        "message": "Subgraph response from 'reviews' was missing key `_entities`",
        "path": [
          "topProducts",
          "@"
        ]
      }
    ],
    "hasNext": true
  },
  {
    "hasNext": false
  }
]
